--- a/Front/mailer/src/App.css
+++ b/Front/mailer/src/App.css
@@ -1,10 +1,8 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,26 +11,9 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Counter, .Weight, .Lock {
+  height: 300px;
+  width: 40%;
+  border: 1px black solid;
+  margin: 5px;
 }
